concord_macros/tests/trybuild/fail/codegen/reserved_nocontent_paginate.stderr
error: pagination is only supported for buffered responses
 --> tests/trybuild/fail/codegen/reserved_nocontent_paginate.rs:8:9
  |
8 |     GET Ping
  |         ^^^^
